httpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: httpserver 
  labels:  
    app:  httpserver
spec:  
  replicas: 1
  selector: 
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      imagePullSecrets:      
      - name: cloudnative      
      containers:      
      - name: httpserver        
        image: fmeng.azurecr.io/httpserver:1.0        
        ports:        
        - containerPort: 8080
        env: #配置
        - name: VERSION 
          valueFrom:
            configMapKeyRef:
              name: http-demo           
              key: version_value 
        resources:
          limits:
            memory: "200Mi"
            cpu: "700m"
          requests:
            memory: "100Mi"
            cpu: "700m"
        readinessProbe:    
          httpGet:      
          path: /healthz      
          port: 8080      
          scheme: HTTP    
          initialDelaySeconds: 5    
          periodSeconds: 3
        livenessProbe:  
          httpGet:    
          path: /healthz    
          port: 8080    
          initialDelaySeconds: 3  
          periodSeconds: 3
        lifecycle:  
          preStop:    
            exec:      
            command:      
              - /stop.sh
